only three posts

--- a/src/content/blog/dark-web/index.mdx
+++ b/src/content/blog/dark-web/index.mdx
@@ -10,7 +10,7 @@ showToc: true
 ---
 Hey fellow keyboard warriors!
 
-So, I was twiddling my thumbs the today, wondering how to best procrastinate... I mean, educate you all. And it hit me: the Dark Web! No, no, don't run screaming for the hills (or your mom). It's not all hackers in hoodies and illicit penguin trading (though, I wouldn't rule that out entirely). The Dark Web is just like the regular internet, just a bit more… shadowy. Think of it as the internet's speakeasy – a little harder to get into, but full of hidden gems (and maybe a few shady characters, but hey, that's life).
+So, I was twiddling my thumbs today, wondering how to best procrastinate... I mean, educate you all. And it hit me: the Dark Web! No, no, don't run screaming for the hills (or your mom). It's not all hackers in hoodies and illicit penguin trading (though, I wouldn't rule that out entirely). The Dark Web is just like the regular internet, just a bit more… shadowy. Think of it as the internet's speakeasy – a little harder to get into, but full of hidden gems (and maybe a few shady characters, but hey, that's life).
 
 Now, before we dive in (pun intended!), let's dispel some myths. The Dark Web isn't some lawless digital wasteland where everyone's trying to steal your cat videos. It's a place for anonymity, secure communication, and access to information that might be restricted elsewhere. Think of it as the internet's slightly eccentric cousin.
 
