--- a/src/content/blog/dark-web/index.mdx
+++ b/src/content/blog/dark-web/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'A Guide to the Dark Web'
+title: 'A Guide To The Dark Web'
 pubDate: 2025-01-30
 description: 'Diving into the Deep End (of the Web, That Is!) - A (Mostly) Harmless Guide to the Dark Web'
 image: ./imgs/featured.jpg
