--- a/src/content/blog/dark-web/index.mdx
+++ b/src/content/blog/dark-web/index.mdx
@@ -4,7 +4,7 @@ pubDate: 2025-01-30
 description: 'Diving into the Deep End (of the Web, That Is!) - A (Mostly) Harmless Guide to the Dark Web'
 image: ./imgs/featured.jpg
 imagealt: 'Image of blah blah'
-tags: ["yapping", "internet"]
+tags: ["yapping", "internet", "technology"]
 category: 'Internet'
 showToc: true
 ---
