--- a/src/content/blog/dark-web/index.mdx
+++ b/src/content/blog/dark-web/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'A Guide To The Dark Web'
 pubDate: 2025-01-30
+modDate: 2025-01-31
 description: 'Diving into the Deep End (of the Web, That Is!) - A (Mostly) Harmless Guide to the Dark Web'
 image: ./imgs/featured.jpg
 imagealt: 'Image of blah blah'
