--- a/src/content/blog/dark-web/index.mdx
+++ b/src/content/blog/dark-web/index.mdx
@@ -8,6 +8,7 @@ imagealt: 'Image of blah blah'
 tags: ["yappings", "internet", "technology"]
 category: 'Internet'
 showToc: true
+draft: false
 ---
 Hey fellow keyboard warriors!
 
