--- a/src/content/blog/dark-web/index.mdx
+++ b/src/content/blog/dark-web/index.mdx
@@ -1,14 +1,14 @@
 ---
-title: 'A Guide To The Dark Web'
+title: 'A Harmless Guide To The Dark Web (Mostly)'
 pubDate: 2025-01-30
 modDate: 2025-01-31
 description: 'Diving into the Deep End (of the Web, That Is!) - A (Mostly) Harmless Guide to the Dark Web'
 image: ./imgs/featured.jpg
-imagealt: 'Image of blah blah'
+imagealt: 'Tor Network and Anonymous Mask'
 tags: ["yappings", "internet", "technology"]
 category: 'Internet'
 showToc: true
-draft: false
+published: true
 ---
 Hey fellow keyboard warriors!
 
