--- a/src/content/blog/beginner-friendly-ubuntu/index.mdx
+++ b/src/content/blog/beginner-friendly-ubuntu/index.mdx
@@ -63,7 +63,7 @@ Flashy, opinionated, and allergic to user agency, for devs craving for stability
 
 
 ## **Conclusion: It’s Not Me, It’s You**
-It's a real shame, because I genuinely loved Ubuntu. Thinking about past love I also loved nano over vim.. maybe I *was* me hmmmm 🤔 nah! It's Ubuntu..
+It's a real shame, because I genuinely loved Ubuntu. Thinking about past love I also loved nano over vim.. maybe It *was* me hmmmm 🤔 nah! It's Ubuntu..
 
 Anyone else feeling the same way? Let me know in the comments! After leaving Ubuntu I did use other distros but none felt the same way at the end I settled with Arch. I am using Arch Linux with Hyprland. Below is a screenshot of it as of writing this post *literally*.
 <div data-aos="fade" data-aos-duration="2000" class="flex flex-col justify-center items-center w-full text-sm">![Arch Linux With VSCode, UWUFetch in terminal and Localhost Preview of this post](./imgs/image.png)<span class="text-gray-400 text-sm italic -mt-6 text-center">look at that cute little arch logo, how can you not love it?</span></div>
