--- a/src/content/blog/beginner-friendly-ubuntu/index.mdx
+++ b/src/content/blog/beginner-friendly-ubuntu/index.mdx
@@ -14,8 +14,8 @@ Hey fellow keyboard warriors!
 
 Ah, Ubuntu. The distro that once felt like a warm welcoming hug for new linux users like me. Back 2016, When Unity was the face of Ubuntu. The slick launcher, the HUD Search, The MacOS like global menu, it all ran like butter on my potato laptop, everything *just worked*.
 
-It was love at first <code class="bg-gray-800 text-white py-1 px-2 rounded-md text-xs">sudo apt-get install</code>.
-but the love with Ubuntu had ended, and *Arch is my new best-friend*.
+It was love at first <code class="bg-gray-800 text-white py-1 px-2 rounded-md text-xs">sudo apt-get install</code>
+but the love with Ubuntu had ended long ago, and now *Arch is my new best-friend*.
 
 
 ## **The Great Desktop Betrayal: Unity To Gnome**
@@ -23,7 +23,7 @@ but the love with Ubuntu had ended, and *Arch is my new best-friend*.
 Remember Unity? Not the Unity from Rick'n'Morty, I am taking about the Desktop Environment.. When I switched from windows to Ubuntu and I saw it boot up for the first time, it felt like a futurictic spaceship dashboard, to me atleast it looked like that way I can't speak for others.
 
 Then Ubuntu swapped it for gnome, while I understand the reasons behind it, to me it felt like being forced to learn a new language.
-My carefully crafted workflow? Gone! My muscle memory? In shambles...  It was like they'd taken my comfortable armchair and replaced it with a gnome 👀 <span class="text-gray-500">(come on.. It was good pun!)</span>
+My carefully crafted workflow? Gone! My muscle memory? In shambles...  It was like they'd taken my comfortable armchair and replaced it with a gnome 👀 (<span class="text-gray-500 text-sm">*come on.. It's good pun!*</span>)
 
 But I still used gnome for while I mean, I know that I am a toxic linux enthusiast but I am not that crazy, <span class="text-gray-200">Yet!</span>. I didn't leave Ubuntu as soon as they switched to Gnome. No I gave it a chance.
 
