--- a/src/content/blog/beginner-friendly-ubuntu/index.mdx
+++ b/src/content/blog/beginner-friendly-ubuntu/index.mdx
@@ -2,7 +2,7 @@
 title: 'Beginner-Friendly Ubuntu? Pressing X For Doubt'
 pubDate: 2025-02-18
 modDate: 2025-02-18
-description: "Today I'll talk about something that's been bugging me for a while: Why I left ubuntu and switched to Arch. It's bit like that first love that slowly curdles into something... opposite of remantic."
+description: "Today I'll talk about something that's been bugging me for a while: Why I left ubuntu and switched to Arch. It's bit like that first love that slowly curdles into something... opposite of romantic."
 image: ./imgs/Ubuntu.png
 imagealt: "Screenshot of Ubuntu 20.04's Default Desktop"
 tags: ["thoughts", "linux", "technology"]
