--- a/src/content/blog/beginner-friendly-ubuntu/index.mdx
+++ b/src/content/blog/beginner-friendly-ubuntu/index.mdx
@@ -23,7 +23,7 @@ but the love with Ubuntu had ended long ago, and now *Arch is my new best-friend
 Remember Unity? Not the Unity from Rick'n'Morty, I am taking about the Desktop Environment.. When I switched from windows to Ubuntu and I saw it boot up for the first time, it felt like a futurictic spaceship dashboard, to me atleast it looked like that way I can't speak for others.
 
 Then Ubuntu swapped it for gnome, while I understand the reasons behind it, to me it felt like being forced to learn a new language.
-My carefully crafted workflow? Gone! My muscle memory? In shambles...  It was like they'd taken my comfortable armchair and replaced it with a gnome 👀 (<span class="text-gray-500 text-sm">*come on.. It's good pun!*</span>)
+My carefully crafted workflow? Gone! My muscle memory? In shambles...  It was like they'd taken my comfortable armchair and replaced it with a gnome 👀 (<span class="text-gray-500 text-sm">*come on.. It's a good pun!*</span>)
 
 But I still used gnome for while I mean, I know that I am a toxic linux enthusiast but I am not that crazy, <span class="text-gray-200">Yet!</span>. I didn't leave Ubuntu as soon as they switched to Gnome. No I gave it a chance.
 
@@ -48,7 +48,7 @@ Ubuntu becoming increasingly unfriendly which is ironic considering how beginner
 Don't even get me started on the increasing number of issues that latest builds have, Ubuntu's poping errors left n right even on the installation screen.
 
 Back in the day, Ubuntu was the rock-solid distro you’d recommend to your grandma. Now? I wouldn't recommend it to my grandma, 
-(<span class="text-gray-500 text-sm">*even though she's dead and didn't know how to read/write let alone know english but still...*</span>)
+(<span class="text-gray-500 text-sm">*even though she's dead and didn't know how to read/write let alone see the face of the right in-front of her but still...*</span>)
 
 ### **Arch is not stable** ☝️🤓
 
